# gxu_rm

./: .gitignore
assistant_camera/: CMakeLists.txt  package.xml
assistant_camera/src/: assistant_camera_node.cpp
rm_auto_aim/: .gitignore  README.md
rm_auto_aim/armor_detector/: CMakeLists.txt  README.md  package.xml
rm_auto_aim/armor_tracker/: CMakeLists.txt  README.md  package.xml
rm_auto_aim/auto_aim_interfaces/: CMakeLists.txt  package.xml
rm_auto_aim/rm_auto_aim/: package.xml
rm_auto_record/: CMakeLists.txt  README.md  package.xml
rm_auto_record/config/: node_params.yaml
rm_auto_record/launch/: auto_record.launch.py
rm_auto_record/src/: record_node.cpp
rm_buff/: .gitignore  LICENSE  README.md
rm_buff/buff_detector/: CMakeLists.txt  package.xml
rm_buff/buff_interfaces/: CMakeLists.txt  package.xml
rm_buff/buff_tracker/: CMakeLists.txt  package.xml
rm_buff/docs/: 2024EnergyGain.md
rm_buff/example/: buff_calculate.c
rm_buff/rm_buff/: CMakeLists.txt  package.xml
rm_buff/rm_buff_bringup/: CMakeLists.txt  package.xml
rm_gimbal_description/: CMakeLists.txt  README.md  package.xml
rm_gimbal_description/urdf/: rm_gimbal.urdf.xacro
rm_serial_driver/: .gitignore  CMakeLists.txt  package.xml
rm_serial_driver/src/: rm_serial_driver.cpp
rm_vision/: Dockerfile  README.md
rm_vision/rm_vision_bringup/: package.xml
ros2-hik-camera/: run.sh
ros2-hik-camera/config/: camera_info.yaml  camera_params.yaml
ros2-hik-camera/src/: hik_camera_node.cpp
ros2_hik_camera/: CMakeLists.txt  README.md  package.xml
(+60 files in other folders)
